--- a/templates/author_detail.twig
+++ b/templates/author_detail.twig
@@ -53,7 +53,9 @@
 						<h2 class="font-semibold">{{page.glob.l10n.author_links}}</h2>
 						{% for link in author.links %}
 							<a class="top-link truncate"  href="{{link.url}}">
-								<svg class="w-6 h-6 inline " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+								<svg class="w-6 h-6 inline" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+								</svg>
 								{{ link.label }}
 							</a>
 						{% endfor %}
