--- a/templates/navbar_list.twig
+++ b/templates/navbar_list.twig
@@ -11,7 +11,7 @@
         </span>
     </div>
     <div class="flex items-end px-2" x-data="initials()">
-        <script>
+        <script type="application/javascript">
             function initials() {
                 return {
                     show: false,
