--- a/templates/author_entry.twig
+++ b/templates/author_entry.twig
@@ -2,7 +2,7 @@
     <div class="relative bg-white  border-b-2">
         <div class="h-56 bg-blush-400 absolute left-0 h-full w-1/3">
             {% if author.thumbnail %}
-                <img class="w-full h-full object-cover" src="{{page.rot}}/{{ author.thumbnail.url }}/" alt="">
+                <img class="w-full h-full object-cover" src="{{page.rot}}/static/authorthumbs/{{ author.id }}/" alt="author image">
             {% else %}
                 {# Heroicons: user #}
                 <svg class="w-full h-full object-cover" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
